@@ -1,13 +1,10 @@
 package com.example.completablefuture;
 
-import com.spotify.futures.CompletableFutures;
+import io.vavr.collection.List;
 import io.vavr.concurrent.Future;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.CompletionStage;
-import java.util.stream.Collectors;
+import static io.vavr.API.*;
+
 
 public class RealLifeVavrFutureExample {
 
@@ -15,15 +12,18 @@ public class RealLifeVavrFutureExample {
         long start = System.currentTimeMillis();
 
         cars().flatMap(cars -> {
-            List<Future<Car>> updatedCars = cars.stream()
-                    .map(car -> rating(car.manufacturerId).map(r -> {
-                        car.setRating(r);
-                        return car;
-                    })).collect(Collectors.toList());
+            List<Future<Car>> updatedCars = cars
+                    .map(car -> rating(car.manufacturerId)
+                            .map(r -> car.withRating(r))).toList();
             return Future.sequence(updatedCars);
-        }).onSuccess(cars -> cars.forEach(System.out::println)
-        ).onFailure(th -> new RuntimeException(th))
-        .toCompletableFuture().join();
+        })
+        .toCompletableFuture().whenComplete((cars, th) -> {
+            if (th == null) {
+                cars.forEach(System.out::println);
+            } else {
+                throw new RuntimeException(th);
+            }
+        }).join();
 
         long end = System.currentTimeMillis();
 
@@ -38,26 +38,19 @@ public class RealLifeVavrFutureExample {
                 Thread.currentThread().interrupt();
                 throw new RuntimeException(e);
             }
-            switch (manufacturer) {
-                case 2:
-                    return 4f;
-                case 3:
-                    return 4.1f;
-                case 7:
-                    return 4.2f;
-                default:
-                    return 5f;
-            }
+            return Match(manufacturer).of(
+                    Case($(2), 4f),
+                    Case($(3), 4.1f),
+                    Case($(7), 4.2f),
+                    Case($(), 5f));
         }).recover(th -> -1f);
     }
 
     static Future<List<Car>> cars() {
-        List<Car> carList = new ArrayList<>();
-        carList.add(new Car(1, 3, "Fiesta", 2017));
-        carList.add(new Car(2, 7, "Camry", 2014));
-        carList.add(new Car(3, 2, "M2", 2008));
-
-        return Future.of(() -> carList);
+        return Future.of(() -> List.of(
+            new Car(1, 3, "Fiesta", 2017),
+            new Car(2, 7, "Camry", 2014),
+            new Car(3, 2, "M2", 2008)));
     }
 
     private static void simulateDelay() throws InterruptedException {
